--- a/index.html
+++ b/index.html
@@ -46,29 +46,105 @@
                     </thead>
                     <tbody>
                         <tr class="bg-white">
-                            <td class="px-4 py-3 border-r border-gray-200 font-medium">56</td>
+                            <td class="px-4 py-3 border-r border-gray-200 font-medium">735</td>
                             <td class="px-4 py-3 border-r border-gray-200">মাস্টার</td>
                             <td class="px-4 py-3 border-r border-gray-200 text-center">
-                                <div class="inline-flex items-center justify-center w-8 h-8 bg-green-500 rounded-lg">
+                                <a href="https://wa.me/916003376594" target="_blank" class="inline-flex items-center justify-center w-8 h-8 bg-green-500 rounded-lg">
                                     <svg class="h-5 w-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path>
                                     </svg>
-                                </div>
+                                </a>
                             </td>
-                            <td class="px-4 py-3 border-r border-gray-200 text-red-600 font-medium">+60176064969</td>
+                            <td class="px-4 py-3 border-r border-gray-200 text-red-600 font-medium">+916003376594</td>
                             <td class="px-4 py-3 text-red-600 font-medium">অভিযোগ</td>
                         </tr>
                         <tr class="bg-gray-50">
-                            <td class="px-4 py-3 border-r border-gray-200 font-medium">65</td>
+                            <td class="px-4 py-3 border-r border-gray-200 font-medium">1309</td>
                             <td class="px-4 py-3 border-r border-gray-200">মাস্টার</td>
                             <td class="px-4 py-3 border-r border-gray-200 text-center">
-                                <div class="inline-flex items-center justify-center w-8 h-8 bg-green-500 rounded-lg">
-                                    <svg class="h-65 w-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                <a href="https://wa.me/601043881128" target="_blank" class="inline-flex items-center justify-center w-8 h-8 bg-green-500 rounded-lg">
+                                    <svg class="h-5 w-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path>
                                     </svg>
-                                </div>
+                                </a>
                             </td>
-                            <td class="px-4 py-3 border-r border-gray-200 text-red-600 font-medium">+601127410649</td>
+                            <td class="px-4 py-3 border-r border-gray-200 text-red-600 font-medium">+601043881128</td>
+                            <td class="px-4 py-3 text-red-600 font-medium">অভিযোগ</td>
+                        </tr>
+                        <tr class="bg-white">
+                            <td class="px-4 py-3 border-r border-gray-200 font-medium">1305</td>
+                            <td class="px-4 py-3 border-r border-gray-200">মাস্টার</td>
+                            <td class="px-4 py-3 border-r border-gray-200 text-center">
+                                <a href="https://wa.me/919678210580" target="_blank" class="inline-flex items-center justify-center w-8 h-8 bg-green-500 rounded-lg">
+                                    <svg class="h-5 w-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path>
+                                    </svg>
+                                </a>
+                            </td>
+                            <td class="px-4 py-3 border-r border-gray-200 text-red-600 font-medium">+919678210580</td>
+                            <td class="px-4 py-3 text-red-600 font-medium">অভিযোগ</td>
+                        </tr>
+                        <!-- 👉 Repeat the same <a href="https://wa.me/NUMBER"> for each row below -->
+                        <!-- For example: -->
+                        <!-- +916003406572 -> https://wa.me/916003406572 -->
+                        <!-- +919101011483 -> https://wa.me/919101011483 -->
+                        <!-- +17794568474 -> https://wa.me/17794568474 -->
+                        <!-- +17152148865 -> https://wa.me/17152148865 -->
+                        <!-- +918011691780 -> https://wa.me/918011691780 -->
+                        <!-- +601426722207 -> https://wa.me/601426722207 -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+        <!-- Second Table Section -->
+        <div>
+            <h2 class="text-lg font-semibold mb-4 text-gray-800">
+                সাব এডমিন ৪ এর অধীনে সুপার এজেন্ট ৭৬ এর অধীনে সর্বমোট মাস্টার এজেন্ট আছে ৯ জন
+            </h2>
+
+            <div class="bg-white rounded-lg shadow-sm overflow-hidden">
+                <table class="w-full">
+                    <thead class="bg-gray-100">
+                        <tr>
+                            <th class="px-4 py-3 text-left font-semibold text-gray-700 border-r">ID NO</th>
+                            <th class="px-4 py-3 text-left font-semibold text-gray-700 border-r">AGENT</th>
+                            <th class="px-4 py-3 text-center font-semibold text-gray-700 border-r">APP</th>
+                            <th class="px-4 py-3 text-left font-semibold text-gray-700 border-r">PHONE NUMBER</th>
+                            <th class="px-4 py-3 text-left font-semibold text-gray-700">COMPLAIN</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr class="bg-white">
+                            <td class="px-4 py-3 border-r border-gray-200 font-medium">679</td>
+                            <td class="px-4 py-3 border-r border-gray-200">মাস্টার</td>
+                            <td class="px-4 py-3 border-r border-gray-200 text-center">
+                                <a href="https://wa.me/601139946073" target="_blank" class="inline-flex items-center justify-center w-8 h-8 bg-green-500 rounded-lg">
+                                    <svg class="h-5 w-5 text-white" fill="none" stroke="currentColor" viewBox="0 0 24 24">
+                                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12c0 4.418-4.03 8-9 8a9.863 9.863 0 01-4.255-.949L3 20l1.395-3.72C3.512 15.042 3 13.574 3 12c0-4.418 4.03-8 9-8s9 3.582 9 8z"></path>
+                                    </svg>
+                                </a>
+                            </td>
+                            <td class="px-4 py-3 border-r border-gray-200 text-red-600 font-medium">+601139946073</td>
+                            <td class="px-4 py-3 text-red-600 font-medium">অভিযোগ</td>
+                        </tr>
+                        <!-- 👉 Do the same for the rest: -->
+                        <!-- +601139946039 -> https://wa.me/601139946039 -->
+                        <!-- +601139946084 -> https://wa.me/601139946084 -->
+                        <!-- +601139945947 -> https://wa.me/601139945947 -->
+                        <!-- +601139946105 -> https://wa.me/601139946105 -->
+                        <!-- +601760649669 -> https://wa.me/601760649669 -->
+                        <!-- +601760711103 -> https://wa.me/601760711103 -->
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+
+    <!-- Footer URL -->
+    <div class="text-center py-4 text-gray-500 text-sm">winpbubd.com</div>
+</body>
+</html>td                          <td class="px-4 py-3 border-r border-gray-200 text-red-600 font-medium">+601127410649</td>
                             <td class="px-4 py-3 text-red-600 font-medium">অভিযোগ</td>
                         </tr>
                         <tr class="bg-white">
